# trezor-firmware

./: .clang-format  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .travis.yml  .yamllint.yml  AGENTS.md  AUTHORS  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  COMMITS.md  CONTRIBUTING.md  CONTRIBUTORS  ChangeLog  Dockerfile  Dockerfile.emulator  Dockerfile.gcc_source  LICENSE  LICENSE.md  MANIFEST.in  Makefile  Makefile.boardloader  Makefile.bootloader  Makefile.firmware  Makefile.include  Makefile.loader  Pipfile  README  README-monorepo.md  README.md  README.rst  SConscript  SConscript.boardloader  SConscript.bootloader  (+204 more)
core/: .coveragerc  .gitignore  .pylintrc  .towncrier.template.md  .travis.yml  AUTHORS  CHANGELOG.T2B1.md  CHANGELOG.T2T1.md  CHANGELOG.T3B1.md  CHANGELOG.T3T1.md  CHANGELOG.T3W1.md  CHANGELOG.md  CMakeLists.txt  ChangeLog  Dockerfile  LICENSE.rust-micropython.md  Makefile  Makefile.scons  README.md  SConscript.ble_bootloader  SConscript.ble_firmware  SConscript.boardloader  SConscript.bootheader  SConscript.bootloader  SConscript.bootloader_ci  SConscript.bootloader_emu  SConscript.coreapp  SConscript.firmware  SConscript.fw_ap  SConscript.fw_cs  SConscript.fw_ss  SConscript.kernel  SConscript.prepare  SConscript.prodtest  SConscript.prodtest_emu  SConscript.reflash  SConscript.secmon  SConscript.signature  SConscript.unix  SConstruct  (+22 more)
core/.changelog.d/: +01658739.added  +external.security  +multisig.security  +optiga.added  +optiga.fixed  +pin.changed  +rbf.security  +slip39.added  0000.fixed  1018.changed  1018.incompatible  1049.added  1120.added  1163.fixed  1167.changed  1231.changed  1231.incompatible  1234567.added  1249.added  1404.added  1430.added  1491.changed  15.removed  1502.changed  1510.changed  1538.changed  1540.added  1541.changed  1545.changed  1554.changed  1557.added  1565.changed  1581.changed  1586.added  1606.changed.1  1606.changed.2  1620.fixed  1633.fixed  1647.removed  1650.removed  (+396 more)
core/docs/: .gitignore  CONTRIBUTING.md  SUMMARY.md  api.md  book.toml  bootloader.md  build.md  emulator.md  hardware.md  intro.md  memory.md  testing.md  toif.md
core/embed/: CMakeLists.txt  Cargo.toml  TODO  pb  rustfmt.toml  trezor-build.yaml
core/genhdr/: CMakeLists.txt
core/mocks/: buffer_types.pyi  micropython.pyi  sys.pyi  timeq.pyi  trezortranslate_keys.pyi  trezortranslate_keys.pyi.mako  ubinascii.pyi  uctypes.pyi  uio.pyi  uos.pyi  ustruct.pyi  utime.pyi  vfs.pyi
core/prof/: prof.py
core/site_scons/: tools.py
core/src/: .gitignore  CMakeLists.txt  _vulture_ignore.txt  all_modules.py  all_modules.py.mako  ble.py  bluetooth.py  boot.py  extapp.py  main.py  mutex.py  protobuf.py  protobuf_test.py  session.py  typing.py  usb.py  usb_empty.py
core/src1/: main.py  usb.py
core/src_game/: game_2048.py  main.py  trezor
core/tests/: README.md  TEST_README.md  check_coverage.sh  common.py  ethereum_common.py  fixtures.py  mock.py  mock_storage.py  mock_wire_interface.py  myTests.sh  run_tests.sh  run_tests_click_emu.sh  run_tests_device_emu.sh  run_tests_device_emu_fido2.sh  run_tests_device_emu_monero.sh  run_tests_device_emu_u2f.sh  slip39_vectors.py  storage.py  test_apps.authdb.py  test_apps.beam.generate_key.py  test_apps.beam.generate_rangeproof.py  test_apps.beam.get_owner_key.py  test_apps.beam.get_public_key.py  test_apps.beam.nonce.py  test_apps.beam.sign_message.py  test_apps.beam.sign_transaction.py  test_apps.beam.verify_message.py  test_apps.binance.address.py  test_apps.binance.sign_tx.py  test_apps.bitcoin.address.py  test_apps.bitcoin.address_grs.py  test_apps.bitcoin.approver.py  test_apps.bitcoin.authorization.py  test_apps.bitcoin.change_detector.py  test_apps.bitcoin.keychain.py  test_apps.bitcoin.ownership_proof.py  test_apps.bitcoin.scripts.py  test_apps.bitcoin.scripts_namecoin.py  test_apps.bitcoin.segwit.bip143.native_p2wpkh.py  test_apps.bitcoin.segwit.bip143.p2wpkh_in_p2sh.py  (+219 more)
core/tools/: README.md  alloc.py  analyze-memory-dump.py  analyze_firmware_code_size.py  analyze_micropython_code_size.py  bin_update.py  binctl  bld_update.py  bluez-emu-bridge.py  bootloader_hashes.py  build_icons.py  build_mocks  build_protobuf  build_solana_templates  build_solana_templates.py  build_templates  build_vendorheader  change_icon_format.py  combine_firmware  convert_ble_firmware.py  coverage-annotate.py  coverage-collect.py  coverage-report  display_image_converter.py  display_image_slideshow.py  display_image_upload.py  frozen_mpy_translator.py  generate_ble_bl_settings.sh  generate_certificates.py  generate_coveragerc.py  generate_hsm_keys.py  generate_tropic_config_docs.py  generate_tropic_model_config.py  generate_vendorheader.sh  headertool.py  jpeg_convert.py  jpg_to_h.py  keyctl  keyctl-coordinator  keyctl-proxy  (+21 more)
core/translations/: .gitignore  blank_translations.py  blank_translations_rules.json  cli.py  crowdin.py  crowdin.yml  cs.json  de.json  en.json  es.json  fr.json  it.json  make_all_blobs.py  order.json  order.py  pt.json  signatures.json  tr.json
nfc-backup-model/: Makefile  README.md  apdu.py  card.py  card_inner.py  commands.py  crypto.py  noise.py  pyproject.toml  reader.py  setup.cfg  test_apdu.py  test_card.py  test_card_inner.py  test_noise.py
python/: .gitignore  AUTHORS  CHANGELOG.md  CHANGELOG.unreleased  MANIFEST.in  Makefile  README.md  default.nix  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.cfg  setup.py  shell.nix  towncrier.toml  tox.ini  trezorctl
python/.changelog.d/: +0596394e.incompatible  +06ca7357.fixed  +13d8ef2d.changed  +1d468db6.deprecated  +47cd2085.removed  +4afd8b1d.fixed  +68d5cd56.added  +7d48c51d.removed  +8ebc4a41.changed  +bdb3ea1b.changed  +cabe85ab.changed  +master-fingerprint.added  +master-fingerprint.changed  +mldsa.added  1026.added  1026.fixed  1167.changed  1193.added  1227.added  1231.added  1231.incompatible  1232.fixed  1257.fixed  1258.added  1258.changed  1266.changed  1363.added  1430.added  1430.added.1  1442.changed  (+171 more)
(+20015 files in other folders)
