[project]
name = "nfc-backup-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.6",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-random-order>=1.2.0",
]
