cargo-features = ["panic-immediate-abort"]

[workspace]
members = [
    "models",
    "rtl",
    "sys",
    "sec",
    "io",
    "upymod",
    "rust",
    "rust-staticlib",
    "projects/boardloader",
    "projects/bootloader",
    "projects/bootloader_ci",
    "projects/secmon",
    "projects/kernel",
    "projects/prodtest",
    "projects/unix",
    "projects/firmware",
    "xbuild",
    "xtask",
]

resolver = "3"

[profile.dev]
panic = "abort"
split-debuginfo = "off"
debug = 2

[profile.release]
panic = "immediate-abort"
opt-level = "z"
lto = true
codegen-units = 1
split-debuginfo = "off"
debug = 2

[profile.release.package.trezor-tjpgdec]
opt-level = 3

[profile.test]
split-debuginfo = "off"
debug = 2

[workspace.dependencies]
cfg-if = "1.0"
cty = "0.2.2"
easer = { version = "0.3.0", default-features = false, features = ["libm"] }
heapless = { version = "0.9.2", features = ["ufmt"], default-features = false }
log = { version = "0.4.29", features = ["max_level_trace", "release_max_level_off"] }
minicbor = { version = "1.0.0", default-features = false }
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
pareen = { version = "0.3.3", path = "../../rust/pareen", default-features = false, features = ["libm", "easer"] }
qrcodegen = { version = "1.8.0", path = "../vendor/QR-Code-generator/rust-no-heap" }
spin = { version = "0.9.8", features = ["rwlock"], default-features = false }
static-alloc = "0.2.6"
trezor-tjpgdec = { version = "0.1.0", path = "../../rust/trezor-tjpgdec" }
ufmt = "0.2.0"
unsize = "1.1.0"
without-alloc = "0.2.2"
zeroize = { version = "1.8.2", default-features = false }

models = { path = "models" }
rtl = { path = "rtl" }
sys = { path = "sys" }
sec = { path = "sec" }
io = { path = "io" }
upymod = { path = "upymod" }
trezor_lib = { path = "rust", default-features = false }

anyhow = "1.0"
bindgen = { version = "0.72.1", default-features = false, features = ["runtime"] }
cc = "1.0.69"
color-eyre = "0.6.5"
glob = "0.3.0"
hex = "0.4.3"
serde_json = "1.0.96"

xbuild = { path = "xbuild" }
