[tool.poetry]
name = "trezor_core_tools"
version = "0.1.0"
description = "Collection of CLI tools for trezor-core development"
authors = ["matejcik <jan.matejek@satoshilabs.com>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
trezor = "^0.13.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
headertool = "trezor_core_tools.headertool:cli"
layout_parser = "trezor_core_tools.layout_parser:main"
combine_firmware = "trezor_core_tools.combine_firmware:main"
