[project]
name = "trezor_core_tools"
version = "0.1.5"
description = "Collection of CLI tools for trezor-core development"
authors = [{ name = "matejcik", email = "jan.matejek@satoshilabs.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = ["trezor>=0.14,<0.15"]

[project.scripts]
headertool = "trezor_core_tools.headertool:cli"
headertool_pq = "trezor_core_tools.headertool_pq:cli"
layout_parser = "trezor_core_tools.layout_parser:main"
lsgen = "trezor_core_tools.lsgen:main"
combine_firmware = "trezor_core_tools.combine_firmware:main"
bootloader_hashes = "trezor_core_tools.bootloader_hashes:main"
nrftool = "trezor_core_tools.nrftool:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
trezor = { path = "../../python", editable = true }
