[package]
name = "trezor-client"
version = "0.1.2"
authors = [
    "Piyush Kumar <piyushkumar2k02@kgpian.iitkgp.ac.in>",
    "joshieDo <ranriver@protonmail.com>",
    "DaniPopes <57450786+DaniPopes@users.noreply.github.com>",
    "Roman Zeyde <me@romanzey.de>",
    "Steven Roose <steven@stevenroose.org>",
]
license = "CC0-1.0"
homepage = "https://github.com/trezor/trezor-firmware/tree/master/rust/trezor-client"
repository = "https://github.com/trezor/trezor-firmware"
description = "Client library for interfacing with Trezor hardware wallet devices"
keywords = ["ethereum", "bitcoin", "trezor", "wallet"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
readme = "README.md"
exclude = [".github/", ".vscode/", "examples/", "scripts/", "trezor-common/", "rustfmt.toml"]
edition = "2021"
rust-version = "1.60"

[dependencies]
protobuf = "3.2"
byteorder = "1.4"
rusb = "0.9"

hex = { version = "0.4", default-features = false, features = ["std"] }
thiserror = "1.0"
tracing = "0.1"

# bitcoin
bitcoin = { version = "0.30", optional = true }
unicode-normalization = { version = "0.1.22", optional = true }

# ethereum
primitive-types = { version = "0.12", default-features = false, optional = true }

[build-dependencies]
protobuf-codegen = "3.2.0"

[dev-dependencies]
tracing-subscriber = "0.3"
serial_test = "2.0.0"

[features]
default = ["bitcoin", "ethereum"]

# Client implementations
bitcoin = ["dep:bitcoin", "unicode-normalization"]
ethereum = ["primitive-types"]

# Just bindings to the Trezor protobufs
binance = []
cardano = []
eos = []
monero = []
nem = []
ripple = []
stellar = []
tezos = []
webauthn = []
