[package]
name = "trezor-thp"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"

[dependencies.heapless]
version = "0.9.2"
default-features = false

[dependencies.trezor-noise-protocol]
version = "0.2.0"
default-features = false
git = "https://github.com/trezor/noise-rust"
rev = "916ce4dc25b0dc830832a51f6f37021e2214e4c7"

[dev-dependencies]
hex = "0.4.3"
