[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trezor-pylint-plugin"
version = "0.1.0"
description = ""
authors = [{ name = "matejcik", email = "ja@matejcik.cz" }]
requires-python = ">=3.9,<4"
readme = "README.md"
dependencies = [
    "pylint",
    "astroid",
]
