[build-system]
requires = ["flit_core >= 3.11,<5"]
build-backend = "flit_core.buildapi"

[project]
name = "trezor-pylint-plugin"
version = "0.1.0"
description = ""
authors = [{ name = "matejcik", email = "ja@matejcik.cz" }]
requires-python = ">=3.9,<4"
readme = "README.md"
dependencies = [
    "pylint",
    "astroid",
]

[tool.uv]
exclude-newer = "30 days"
