[package]
name = "crypto"
version = "0.0.0"
edition = "2024"
links = "crypto"

[dependencies]
cty.workspace = true
heapless = { workspace = true, default-features = false }
zeroize = { workspace = true, default-features = false, features = ["derive"] }

rtl = { workspace = true, optional = true }
models = { workspace = true, optional = true }

[build-dependencies]
color-eyre.workspace = true
xbuild.workspace = true
bindgen = { workspace = true, default-features = false }
cc.workspace = true
glob.workspace = true

[dev-dependencies]
hex.workspace = true
rand.workspace = true

[features]
with_new_crates = ["dep:models", "dep:rtl"]

model_t2t1 = ["models/model_t2t1"]

# --------------------------------------------------------------------------
# Selectable features
# --------------------------------------------------------------------------

emulator = ["models/emulator", "insecure_prng"]

aes_gcm = []
ed25519_no_precomp = []
eos = []
insecure_prng = []
mldsa = []
nem = []
noise = ["aes_gcm"]
production = ["rtl/production"]
secp256k1_zkp = []
sphincsplus = []
universal_fw = []

test = [
    "aes_gcm",
    "insecure_prng",
    "mldsa",
    "noise",
    "secp256k1_zkp",
    "sphincsplus",
    "universal_fw",
]

test_with_new_crates = [
    "test",
    "with_new_crates",
    "emulator",
    "models/mcu_stm32u5g",
    "models/model_t3w1",
]
